#+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline author:t
#+OPTIONS: broken-links:nil c:nil creator:nil d:(not "LOGBOOK") date:t e:t
#+OPTIONS: email:nil f:t inline:t num:nil p:nil pri:nil prop:nil stat:t tags:t
#+OPTIONS: tasks:t tex:t timestamp:t title:t toc:t todo:t |:t
#+OPTIONS: auto-id:t

#+TITLE: Unidata Science Gateway News
#+DATE: {{{time(%Y-%m-%d %H:%M:%S %Z)}}}
#+AUTHOR: Julien Chastang
#+EMAIL: chastang at ucar dot edu
#+LANGUAGE: en
#+SELECT_TAGS: export
#+EXCLUDE_TAGS: noexport
#+CREATOR: Emacs 26.2 (Org mode 9.2.1)

#+HTML_LINK_HOME: https://science-gateway.unidata.ucar.edu/
#+RSS_IMAGE_URL: https://avatars2.githubusercontent.com/u/613345?s=200&amp;v=4

* 9/17/2021, Unidata Science Gateway Presentation at eScience 2021
  :PROPERTIES:
   :RSS_TITLE: Unidata Science Gateway Presentation at eScience 2021
   :PUBDATE: <2021-09-17 Fri>
   :RSS_PERMALINK: index.html#h-81EC6CA6
   :CUSTOM_ID: h-81EC6CA6
   :ID:       CBF7EEF9-D093-4E99-A093-CE2BF78E9ECB
  :END:

The presentation will be given as part of the 17th IEEE eScience 2021 International Conference. [[https://www.escience2021.org/timetable][The talk is part of the Technical Program and will be delivered on Wednesday, September 22nd at 15:30-1600 CEST]].

* 8/25/2021, JupyterHub Resources Still Available for Fall 2021 Courses
  :PROPERTIES:
   :RSS_TITLE: JupyterHub Resources Still Available for Fall 2021 Courses
   :PUBDATE:  <2021-08-25 Wed>
   :RSS_PERMALINK: index.html#h-EA7E234B
   :CUSTOM_ID: h-EA7E234B
   :ID:       C1D412C2-506A-41DD-B543-DD143D9C0C3A
  :END:

[[https://www.unidata.ucar.edu/blogs/news/entry/offer-unidata-science-gateway-jupyterhub3][Unidata Science Gateway JupyterHub Resources Available for Fall 2021 Courses]]
