@@ -199,7 +199,7 @@
 <script type="text/javascript" src="styles/src/readtheorg_theme/js/readtheorg.js"></script>
 <style type="text/css">.figure-number {display: none;}</style>
 <script type="text/javascript">
-// @license magnet:?xt=urn:btih:e95b018ef3580986a04669f1b5879592219e2a7a&dn=public-domain.txt Public Domain
+// @license magnet:?xt=urn:btih:1f739d935676111cfff4b4693e3816e664797050&amp;dn=gpl-3.0.txt GPL-v3-or-Later
 <!--/*--><![CDATA[/*><!--*/
      function CodeHighlightOn(elem, id)
      {
@@ -230,6 +230,7 @@
 <ul>
 <li><a href="#h-161F43B1">News</a>
 <ul>
+<li><a href="#h-F4EE3A44">9/24/2021, Unidata Community Survey</a></li>
 <li><a href="#h-81EC6CA6">9/17/2021, Unidata Science Gateway Presentation at eScience 2021</a></li>
 <li><a href="#h-EA7E234B">8/25/2021, JupyterHub Resources Still Available for Fall 2021 Courses</a></li>
 </ul>
@@ -287,6 +288,15 @@
 <p>
 <a href="./news.xml">rss.xml</a>
 </p>
+</div>
+
+<div id="outline-container-h-F4EE3A44" class="outline-3">
+<h3 id="h-F4EE3A44">9/24/2021, Unidata Community Survey</h3>
+<div class="outline-text-3" id="text-h-F4EE3A44">
+<p>
+Make your voice heard on Unidata Science Gateway offerings. Please partake in the <a href="https://bit.ly/2021UnidataSurvey">Unidata Community Survey</a>.
+</p>
+</div>
 </div>
 
 <div id="outline-container-h-81EC6CA6" class="outline-3">
@@ -1218,7 +1228,7 @@ Keywords: OpenStack, JupyterHub, Kubernetes, Cloud Computing, Unidata, Magnum
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Date: 2021-09-17 16:32:07 MDT</p>
+<p class="date">Date: 2021-09-24 16:50:33 MDT</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
